--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,36 @@
 			app:layout_constraintRight_toRightOf="parent"
 			app:layout_constraintTop_toTopOf="parent" />
 
+		<TextView
+			android:id="@+id/error_text"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="@dimen/spacing_normal"
+			android:paddingTop="@dimen/spacing_normal"
+			android:textColor="@color/colorAccent"
+			android:textSize="@dimen/text_size_extra_large"
+			android:visibility="gone"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
+			tools:text="@string/app_name" />
+
+		<Button
+			android:id="@+id/try_again"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_marginStart="@dimen/spacing_normal"
+			android:background="@color/colorPrimary"
+			android:paddingTop="@dimen/spacing_normal"
+			android:text="@string/try_again"
+			android:textColor="@color/colorAccent"
+			android:textSize="@dimen/text_size_extra_large"
+			android:visibility="gone"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/error_text" />
+
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
